Bug 359866 - Regression - aff file no longer found
Summary: Regression - aff file no longer found
Status: RESOLVED FIXED
Alias: None
Product: frameworks-sonnet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-27 17:50 UTC by stupor_scurvy343
Modified: 2016-02-27 20:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stupor_scurvy343 2016-02-27 17:50:54 UTC
af4c6011d545fec7bf5a1a0a548ae68aa96e2fc8 introduces a regression causing aff files to no longer be found:

open("/usr/share/hunspellen_AU.aff", O_RDONLY) = -1 ENOENT (No such file or directory)

This causes strange spellchecker behaviour such as certain forms of words (such as plurals in my locale) to be marked as incorrect.
Comment 1 Kåre Särs 2016-02-27 20:16:40 UTC
Git commit 48cae356b4b69567a2436ed63f72babfa8b739be by Kåre Särs.
Committed on 27/02/2016 at 20:14.
Pushed by sars into branch 'master'.

Fix Hunspell dictionary search paths missing '/'

M  +1    -1    src/plugins/hunspell/hunspellclient.cpp
M  +1    -1    src/plugins/hunspell/hunspelldict.cpp

http://commits.kde.org/sonnet/48cae356b4b69567a2436ed63f72babfa8b739be