Fix Hunspell dictionary search paths missing '/'

BUG: 359866